--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-    "name": "indemnity83/mcmod",
-    "description": "A tool for working with minecraft mod files",
+    "name": "indemnity83/solder-toolbelt",
+    "description": "A tool for working with TechnicSolder",
     "require": {
         "php": ">=5.5",
         "symfony/console": "~2.0",
-        "symfony/process": "~2.0"
+        "symfony/process": "~2.0",
+        "guzzlehttp/guzzle": "~5.2"
     },
     "license": "MIT",
     "authors": [
@@ -15,11 +16,11 @@
     ],
     "autoload": {
         "psr-4": {
-            "Indemnity83\\ModPack\\": "src/"
+            "Indemnity83\\SolderToolbelt\\": "src/"
         }
     },
     "bin": [
-        "mcmod"
+        "solder"
     ],
     "minimum-stability": "stable"
 }
